data/derived/sp14/progs/unify/prog2998.ml.out
Characters 53-71:
  | false -> (digitsOfInt n/10) @ [n%10]
             ^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
